--- a/amino detailed.html
+++ b/amino detailed.html
@@ -50,20 +50,8 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 1.jpg" alt="">
+                  <img src="assets/img/portfolio/Amino.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 3.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/Lampshade 4.jpg" alt="">
-                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -74,16 +62,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Manufacturing</li>
-                <li><strong>Organization</strong>: Columbia University</li>
-                <li><strong>Project date</strong>: Feb 2023</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 2 Final.pdf">Report</a></li>
-              </ul>
+                <li><strong>Category</strong>: Data Analysis</li>
+                <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
+                <li><strong>Project date</strong>: Oct 2019 - Dec 2019</li>
+                <li><strong>Project URL</strong>: <a href="https://digital.wpi.edu/concern/student_works/02870z427?locale=en">Report</a></li>
+             </ul>
             </div>
             <div class="portfolio-description">
               <h2>Introduction</h2>
               <p>
-                Used OpenSCAD to design a 3D model of a tea light lampshade with carvings on it. I created a shell using the "difference" command on two spheres with different diameters and added a cylinder to hollow out both the top and bottom. Carvings were made using long, thin cylinders looped around a point and laid out at certain degrees. The design was 3D printed, resulting in a simple yet elegant lampshade lattice that allows light to shine through, creating a cozy atmosphere in any room.
+                This project was on the development of a series of recommendations aimed to assist Amino, a startup blockchain company located in Hangzhou, China, in their creation of a marketing plan for selling computers. The team surveyed students aged 18-25 on their interest in joining Amino and their opinions on certain aspects of the business. In conjunction with our partner university, the team also interviewed working professionals familiar with blockchain technology on the same topics. Analysis showed that Amino should first target those familiar with blockchain, emphasize building trust with customers, and clearly advertise the value of the product.
               </p>
             </div>
           </div>
