--- a/arduino speaker detail.html
+++ b/arduino speaker detail.html
@@ -50,20 +50,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 1.jpg" alt="">
+                  <img src="assets/img/portfolio/Speaker 1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 2.jpg" alt="">
+                  <img src="assets/img/portfolio/Speaker 2.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 3.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/Lampshade 4.jpg" alt="">
-                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -74,16 +66,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Manufacturing</li>
-                <li><strong>Organization</strong>: Columbia University</li>
-                <li><strong>Project date</strong>: Feb 2023</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 2 Final.pdf">Report</a></li>
-              </ul>
+                <li><strong>Category</strong>: Arduino</li>
+                <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
+                <li><strong>Project date</strong>: Oct 2020 - Dec 2020</li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/ME3902 Arduino Speaker Project.pdf">Report</a></li>
+             </ul>
             </div>
             <div class="portfolio-description">
               <h2>Introduction</h2>
               <p>
-                Used OpenSCAD to design a 3D model of a tea light lampshade with carvings on it. I created a shell using the "difference" command on two spheres with different diameters and added a cylinder to hollow out both the top and bottom. Carvings were made using long, thin cylinders looped around a point and laid out at certain degrees. The design was 3D printed, resulting in a simple yet elegant lampshade lattice that allows light to shine through, creating a cozy atmosphere in any room.
+                In this project, I utilized an Arduino board to construct a unique speaker that was equipped with an IR sensor. The speaker had three buttons that enabled the user to control play/pause, next, and last song. However, unlike traditional speakers, when the IR sensor was inactive, the song would play automatically, and the buttons were unresponsive. Once the IR sensor was triggered, it would activate the speaker's controls, allowing the user to pause, play, and switch songs. This feature made the speaker more user-friendly and convenient to use. Overall, the project showcased the versatility of the Arduino board and how it can be utilized to create unique and innovative projects.
               </p>
             </div>
           </div>
