--- a/auto flushing system detailed.html
+++ b/auto flushing system detailed.html
@@ -50,20 +50,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 1.jpg" alt="">
+                  <img src="assets/img/portfolio/Flushing System 1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 2.jpg" alt="">
+                  <img src="assets/img/portfolio/Flushing System 2.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 3.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/Lampshade 4.jpg" alt="">
-                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -75,15 +67,15 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Manufacturing</li>
-                <li><strong>Organization</strong>: Columbia University</li>
-                <li><strong>Project date</strong>: Feb 2023</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 2 Final.pdf">Report</a></li>
-              </ul>
+                <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
+                <li><strong>Project date</strong>: May 2020 - Aug 2020</li>
+                <li><strong>Project URL</strong>: <a href="https://digital.wpi.edu/concern/student_works/g732dc46h?locale=en">Report</a></li>
+             </ul>
             </div>
             <div class="portfolio-description">
               <h2>Introduction</h2>
               <p>
-                Used OpenSCAD to design a 3D model of a tea light lampshade with carvings on it. I created a shell using the "difference" command on two spheres with different diameters and added a cylinder to hollow out both the top and bottom. Carvings were made using long, thin cylinders looped around a point and laid out at certain degrees. The design was 3D printed, resulting in a simple yet elegant lampshade lattice that allows light to shine through, creating a cozy atmosphere in any room.
+                In response to the Covid-19 pandemic, we discovered that the virus could potentially spread through human feces, and that the flushing of toilets could disperse toilet water particles up to ten meters. With this knowledge, we developed a prototype of an automated toilet flushing system in a team of four. This system was designed to flush only when the toilet lid was closed, thus minimizing the spread of particles and reducing the risk of transmission. Our team worked meticulously on this project, from designing the system to building and testing it. By implementing this automated toilet flushing system, we hope to contribute to reducing the transmission of Covid-19 and other harmful pathogens through the flushing of toilet.
               </p>
             </div>
           </div>
