--- a/desk organizer detail.html
+++ b/desk organizer detail.html
@@ -73,11 +73,11 @@
                 <li><strong>Category</strong>: Manufacturing</li>
                 <li><strong>Organization</strong>: Columbia University</li>
                 <li><strong>Project date</strong>: Feb 2023</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 1.pdf">Brief Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 1.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Brief Introduction</h2>
+              <h2>Introduction</h2>
               <p>
                 This project involved writing code in Matlab to generate an SVG file, which was then converted to a DWG file that could be opened by AutoCAD. In AutoCAD, I added carvings to the design before sending it to a laser-cut machine for printing. Finally, the team assembled the product using nuts and bolts.
               </p>
