--- a/grip robot detail.html
+++ b/grip robot detail.html
@@ -69,11 +69,11 @@
                 <li><strong>Category</strong>: Design</li>
                 <li><strong>Organization</strong>: Columbia University</li>
                 <li><strong>Project date</strong>: Dec 2022</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/Intro to Robotics Final Report.pdf">Brief Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/Intro to Robotics Final Report.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Brief Introduction</h2>
+              <h2>Introduction</h2>
               <p>
                In group of 4, proposed a new robot arm design that could function as an agent in automated libraries, making the process of borrowing books more efficient and safer. The design included five degrees of freedom, enabling the robot to grasp books from various angles and deliver them to students. The feasibility of the design was assessed by drawing DH-tables, Jacobian matrices, and inverse kinematics to simulate the robot's movements. Incorporating these functionalities into the design ensured that the robot could accurately locate and retrieve books without causing damage or delay. Ultimately, this innovative solution had the potential to save time for students and faculty members and reduce the risk of book damage in automated libraries.
               </p>
