--- a/renal price prediction detail.html
+++ b/renal price prediction detail.html
@@ -69,11 +69,11 @@
                 <li><strong>Category</strong>: Data Analysis</li>
                 <li><strong>Organization</strong>: Columbia University</li>
                 <li><strong>Project date</strong>: Nov 2022</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/DS Final Report.pdf">Brief Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/DS Final Report.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Brief Introduction</h2>
+              <h2>Introduction</h2>
               <p>
                 We analyzed rental data for Manhattan over the past year and explored the factors that affected apartment rent prices. We used statistical models like regression analysis to analyze data on location, apartment size, amenities, and neighborhood demographics to identify relationships between these factors and rent prices. Additionally, we conducted market research to gather information on current rental trends in Manhattan, such as vacancy rates and apartment popularity. The results of our analysis provided helpful guidance for potential renters looking to make informed decisions based on their needs and budget.
               </p>
