--- a/robotic dog detail.html
+++ b/robotic dog detail.html
@@ -77,7 +77,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Brief Introduction</h2>
+              <h2>Introduction</h2>
               <p>
                Designing and constructing a robot dog from initial sketch to a 3D-printed prototype. This is achieved by utilizing Solidworks and 3D printing technology. The functioning prototype is created using eight servo motors, a Potato Pi computer, servo motor controller, and DC converter, which allows for controlled movement of the legs and a walking motion for the robot dog.
               </p>
