--- a/wisper machine detail.html
+++ b/wisper machine detail.html
@@ -50,20 +50,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 1.jpg" alt="">
+                  <img src="assets/img/portfolio/Wisper 1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 2.jpg" alt="">
+                  <img src="assets/img/portfolio/Wisper 2.jpg" alt="">
                 </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Lampshade 3.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                    <img src="assets/img/portfolio/Lampshade 4.jpg" alt="">
-                  </div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -75,15 +67,15 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Manufacturing</li>
-                <li><strong>Organization</strong>: Columbia University</li>
-                <li><strong>Project date</strong>: Feb 2023</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 2 Final.pdf">Report</a></li>
-              </ul>
+                <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
+                <li><strong>Project date</strong>: Aug 2020 - Oct 2020</li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/ME4320 Wisper Report.pdf">Report</a></li>
+             </ul>
             </div>
             <div class="portfolio-description">
               <h2>Introduction</h2>
               <p>
-                Used OpenSCAD to design a 3D model of a tea light lampshade with carvings on it. I created a shell using the "difference" command on two spheres with different diameters and added a cylinder to hollow out both the top and bottom. Carvings were made using long, thin cylinders looped around a point and laid out at certain degrees. The design was 3D printed, resulting in a simple yet elegant lampshade lattice that allows light to shine through, creating a cozy atmosphere in any room.
+                We designed and constructed a whisper machine that was capable of transforming buckles of cotton into wisps, which could simulate pet hair. This machine was built to fulfill the testing needs of iRobot's new Roomba prototype. With the ability to simulate pet hair, the Roomba prototype can be thoroughly tested to ensure that it can clean up pet hair effectively. The whisper machine was carefully designed to create wisps that were consistent in size and shape, so the Roomba prototype could be tested under the same conditions each time. Our machine was an essential component of the testing process for iRobot, allowing them to refine and perfect their Roomba prototype before launching it to the market.
               </p>
             </div>
           </div>
