--- a/index.html
+++ b/index.html
@@ -315,6 +315,63 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Speaker 2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Arduino Speaker</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+                  <a href="arduino speaker detail.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Design filter-Manufacturing">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Wisper 1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Wisper Machine</h4>
+                <p>Design</p>
+                <p>Manufacturing</p>
+                <div class="portfolio-links">
+<!--                   <a href="assets/img/portfolio/Robot Dog 1.JPG" data-gallery="portfolioGallery" class="portfolio-Robot Dog" title="Robot Dog"><i class="bx bx-plus"></i></a>
+ -->                  <a href="wisper machine detail.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Design filter-Manufacturing">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Flushing System 1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Automated Flushing System</h4>
+                <p>Design</p>
+                <p>Manufacturing</p>
+                <div class="portfolio-links">
+<!--                   <a href="assets/img/portfolio/Robot Dog 1.JPG" data-gallery="portfolioGallery" class="portfolio-Robot Dog" title="Robot Dog"><i class="bx bx-plus"></i></a>
+ -->                  <a href="auto flushing system detailed.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Wisper 1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Amino Marketing Research</h4>
+                <p>Other</p>
+                <div class="portfolio-links">
+<!--                   <a href="assets/img/portfolio/Robot Dog 1.JPG" data-gallery="portfolioGallery" class="portfolio-Robot Dog" title="Robot Dog"><i class="bx bx-plus"></i></a>
+ -->                  <a href="amino detailed.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
