--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-Other">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Wisper 1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Amino.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Amino Marketing Research</h4>
                 <p>Other</p>
