--- a/amino detailed.html
+++ b/amino detailed.html
@@ -65,7 +65,7 @@
                 <li><strong>Category</strong>: Data Analysis</li>
                 <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
                 <li><strong>Project date</strong>: Oct 2019 - Dec 2019</li>
-                <li><strong>Project URL</strong>: <a href="https://digital.wpi.edu/concern/student_works/02870z427?locale=en">Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/Amino Report.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
