--- a/auto flushing system detailed.html
+++ b/auto flushing system detailed.html
@@ -69,7 +69,7 @@
                 <li><strong>Category</strong>: Manufacturing</li>
                 <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
                 <li><strong>Project date</strong>: May 2020 - Aug 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://digital.wpi.edu/concern/student_works/g732dc46h?locale=en">Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/Auto-Flushing Toilet Report.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
