--- a/food printing detailed.html
+++ b/food printing detailed.html
@@ -73,7 +73,7 @@
                 <li><strong>Category</strong>: Data Analysis</li>
                 <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
                 <li><strong>Project date</strong>: Oct 2019 - Dec 2019</li>
-                <li><strong>Project URL</strong>: <a href="assets/docs/Amino Report.pdf">Report</a></li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 5 - Final.pdf">Report</a></li>
              </ul>
             </div>
             <div class="portfolio-description">
