--- a/index.html
+++ b/index.html
@@ -263,6 +263,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Manufacturing filter-Design">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Food 1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Food Printing</h4>
+                <p>Robotics</p>
+                <p>Manufacturing</p>
+                <div class="portfolio-links">
+                  <a href="food printing detailed.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-Manufacturing">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Lampshade 1.jpg" class="img-fluid" alt="">
