--- a/food printing detailed.html
+++ b/food printing detailed.html
@@ -70,9 +70,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Data Analysis</li>
-                <li><strong>Organization</strong>: Worcester Polytechnic Institute</li>
-                <li><strong>Project date</strong>: Oct 2019 - Dec 2019</li>
+                <li><strong>Category</strong>: Manufacturing</li>
+                <li><strong>Organization</strong>: Columbia University</li>
+                <li><strong>Project date</strong>: Mar 2023 - May 2023</li>
                 <li><strong>Project URL</strong>: <a href="assets/docs/MECE4606 Assignment 5 - Final.pdf">Report</a></li>
              </ul>
             </div>
