--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
               <img src="assets/img/portfolio/Food 1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Food Printing</h4>
-                <p>Robotics</p>
+                <p>Design</p>
                 <p>Manufacturing</p>
                 <div class="portfolio-links">
                   <a href="food printing detailed.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
