--- a/amino detailed.html
+++ b/amino detailed.html
@@ -50,7 +50,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Amino.jpg" alt="">
+                  <img src="assets/img/portfolio/Amino 1.jpg" alt="">
                 </div>
 
               </div>
