food print discript

--- a/food printing detailed.html
+++ b/food printing detailed.html
@@ -79,7 +79,7 @@
             <div class="portfolio-description">
               <h2>Introduction</h2>
               <p>
-                This project was on the development of a series of recommendations aimed to assist Amino, a startup blockchain company located in Hangzhou, China, in their creation of a marketing plan for selling computers. The team surveyed students aged 18-25 on their interest in joining Amino and their opinions on certain aspects of the business. In conjunction with our partner university, the team also interviewed working professionals familiar with blockchain technology on the same topics. Analysis showed that Amino should first target those familiar with blockchain, emphasize building trust with customers, and clearly advertise the value of the product.
+                This project was on the utilization of 3D printing technology in the realm of culinary arts. Specifically, we developed Python code to generate G-code files, which contained coordinates to direct the extruder in the creation of 3D spirographs using cream cheese or peanut butter. This project involved a thorough investigation into the potential of 3D printing in the culinary industry and required extensive coding and technical skills to successfully execute.
               </p>
             </div>
           </div>
