--- a/robotic dog detail.html
+++ b/robotic dog detail.html
@@ -50,15 +50,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot Dog 1.JPG" alt="">
+                  <img src="assets/img/portfolio/Robot 1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot Dog 2.JPG" alt="">
+                  <img src="assets/img/portfolio/Robot 2.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot Dog 3.JPG" alt="">
+                  <img src="assets/img/portfolio/Robot 3.JPG" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Robot 4.JPG" alt="">
                 </div>
 
               </div>
@@ -72,8 +76,8 @@
               <ul>
                 <li><strong>Category</strong>: Robotics</li>
                 <li><strong>Organization</strong>: Columbia University</li>
-                <li><strong>Project date</strong>: Jan 2023 - Present</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project date</strong>: Jan 2023 - May 2023</li>
+                <li><strong>Project URL</strong>: <a href="assets/docs/Robot Dog Journey Video.mp4">Journey Video</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
