--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-Robotics filter-Design">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/Robot Dog 1.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Robot 1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Robot Dog</h4>
                 <p>Robotics</p>
