--- a/robotic dog detail.html
+++ b/robotic dog detail.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot 2.JPG" alt="">
+                  <img src="assets/img/portfolio/Robot 2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
