--- a/robotic dog detail.html
+++ b/robotic dog detail.html
@@ -77,7 +77,7 @@
                 <li><strong>Category</strong>: Robotics</li>
                 <li><strong>Organization</strong>: Columbia University</li>
                 <li><strong>Project date</strong>: Jan 2023 - May 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://www.youtube.com/watch?v=8CJHaah8qHI">Journey Video</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.youtube.com/embed/8CJHaah8qHI">Journey Video</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
