--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-small.png" rel="icon">
+  <link href="assets/img/Columbia Logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -686,7 +686,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div><!-- End testimonial item 
+            </div> End testimonial item 
 
           </div>
           <div class="swiper-pagination"></div>
@@ -696,7 +696,7 @@
     </section> End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -710,7 +710,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>400 W 113th St, New York, NY 10025</p>
+                <p>70 Greene St, Jersey City, NJ 07302</p>
               </div>
 
               <div class="email">
@@ -759,7 +759,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section> --><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
