--- a/compound robot.html
+++ b/compound robot.html
@@ -58,11 +58,15 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <video src="assets/img/portfolio/Compound 3.mp4" playinview = "true" muted="true" autopause="true" controls="true"></video>
+                  <img src="assets/img/portfolio/Compound 3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <video src="assets/img/portfolio/Compound 4.mp4" playinview = "true" muted="true" autopause="true" controls="true"></video>
+                </div>
+
+                <div class="swiper-slide">
+                  <video src="assets/img/portfolio/Compound 5.mp4" playinview = "true" muted="true" autopause="true" controls="true"></video>
                 </div>
 
               </div>
