compound no design filter

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-Robotics filter-Design">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-Robotics">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/Compound 1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
